--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
 			<version>8.0.33</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-core</artifactId>
 			<version>1.11.5</version>
