adicionando classe para o projeto fornecedor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ file.upload-dir=public
 
 api.security.token.secret=${JWT_SECRET:12345678}
 
-api.security.path.path_image=${Path_image:C:/Users/luisp/Documents/Programacao/spring/Sorveteria_Gelicia-do-Vale/src/main/resources/static/public}
+# Configurações do Flyway
+#spring.flyway.enabled=true
+#spring.flyway.locations=classpath:db/migration
