--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,20 @@
-#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=admin
-#spring.jpa.hibernate.ddl-auto=update
-##spring.jpa.hibernate.ddl-auto=create-drop
+# Configurações do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://dpg-clhmqinjc5ks73emufk0-a:5432/sorveteria_db
+spring.datasource.username=sorveteria_db_user
+spring.datasource.password=sua_senha_se_aplicavel
 
-file.upload-dir=public
+# Exibir SQL gerado pelo Hibernate (opcional, para depuração)
+spring.jpa.show-sql=true
 
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sorveteria?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#spring.datasource.username=root
-#spring.datasource.password=smysque457l342
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.hibernate.ddl-auto=update
-
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/luis3362_sorveteria?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=luism3362_luism3362
-spring.datasource.password=@baaL54ria,
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Hibernate ddl auto (opcional, define a criação automática de tabelas)
 spring.jpa.hibernate.ddl-auto=update
 
-api.security.token.secret=${JWT_SECRET:12345678}
 
+
+
+
+file.upload-dir=public
+api.security.token.secret=${JWT_SECRET:12345678}
 # Configurações do Flyway
 #spring.flyway.enabled=true
 #spring.flyway.locations=classpath:db/migration
