--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 file.upload-dir=public
 api.security.token.secret=${JWT_SECRET:12345678}
 
-
+#
 #spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=admin
 #spring.jpa.hibernate.ddl-auto=update
-##spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
