--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-#spring.datasource.url=jdbc:postgresql://dpg-clhmqinjc5ks73emufk0-a:5432/sorveteria_db
-#spring.datasource.username=sorveteria_db_user
-#spring.datasource.password=7R6aLRC6w6zhKb8ExfzMG8zwhdLCPsxs
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
-
-
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://dpg-clhmqinjc5ks73emufk0-a:5432/sorveteria_db
+spring.datasource.username=sorveteria_db_user
+spring.datasource.password=7R6aLRC6w6zhKb8ExfzMG8zwhdLCPsxs
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.jpa.hibernate.ddl-auto=update
 
 
 
