ajuste no apontamento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.username=postgres
 #spring.datasource.password=admin
 #spring.jpa.hibernate.ddl-auto=update
+#
+#
 
-
-
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 
 file.upload-dir=public
 api.security.token.secret=${JWT_SECRET:12345678}
