--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 #
 #
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 file.upload-dir=public
 api.security.token.secret=${JWT_SECRET:12345678}
